@@ -1,17 +1,16 @@
 package woowa.team4.bff.search.service;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.event.TransactionPhase;
 import org.springframework.transaction.event.TransactionalEventListener;
 import woowa.team4.bff.common.aop.MethodLogging;
-import woowa.team4.bff.menu.repository.MenuRepository;
-import woowa.team4.bff.restauarnt.domain.Restaurant;
-import woowa.team4.bff.restauarnt.repository.RestaurantRepository;
 import woowa.team4.bff.search.domain.MenuSearch;
 import woowa.team4.bff.search.domain.RestaurantSearch;
+import woowa.team4.bff.search.domain.RestaurantSearchResult;
+import woowa.team4.bff.search.repository.RestaurantEntityRepository;
 import woowa.team4.bff.search.repository.SearchRepository;
 import woowa.team4.bff.search.service.command.CreateRestaurantSearchCommand;
 import woowa.team4.bff.search.service.command.SearchRestaurantCommand;
@@ -21,8 +20,7 @@ import woowa.team4.bff.search.service.command.UpdateRestaurantSearchCommand;
 @RequiredArgsConstructor
 public class SearchService {
     private final SearchRepository searchRepository;
-    private final RestaurantRepository restaurantRepository;
-    private final MenuRepository menuRepository;
+    private final RestaurantEntityRepository restaurantEntityRepository;
 
     @TransactionalEventListener(phase = TransactionPhase.AFTER_COMMIT)
     public String addRestaurant(CreateRestaurantSearchCommand command) {
@@ -41,17 +39,17 @@ public class SearchService {
     }
 
     @MethodLogging
-    public List<Restaurant> search(SearchRestaurantCommand command){
-        // ToDo: 비동기로 쏴도 괜찮을 까?
-        List<RestaurantSearch> restaurantSearches =  searchRepository.findAllByRestaurantName(command.keyword());
-        List<MenuSearch> menuSearches =  searchRepository.findAllByMenuName(command.keyword());
+    public List<RestaurantSearchResult> search(SearchRestaurantCommand command){
+        return restaurantEntityRepository.findRestaurantSearchResults(getRestaurantIds(command.keyword()), command.deliveryLocation());
+    }
 
-        // restaurant id list, menu id list 가 주어질 때 join 으로 Restaurant & Menu 가져 오는 쿼리 짜야 할 듯
-        // review 쪽도 join 해야 할까?
-        restaurantRepository.findAllByIds(restaurantSearches.stream().map(RestaurantSearch::getRestaurantId).collect(Collectors.toList()),
-                command.deliveryLocation());
-        menuRepository.findAllByIds(menuSearches.stream().map(MenuSearch::getMenuId).collect(Collectors.toList()),
-                command.deliveryLocation());
-        return null;
+    private List<Long> getRestaurantIds(String keyword){
+        // ToDo: 비동기로 쏴도 괜찮을 까?
+        List<RestaurantSearch> restaurantSearches =  searchRepository.findAllByRestaurantName(keyword);
+        List<MenuSearch> menuSearches =  searchRepository.findAllByMenuName(keyword);
+        List<Long> ids = new ArrayList<>();
+        ids.addAll(restaurantSearches.stream().map(RestaurantSearch::getRestaurantId).toList());
+        ids.addAll(menuSearches.stream().map(MenuSearch::getRestaurantId).toList());
+        return ids;
     }
 }
